og image for share

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,22 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Twitter Clone Built Using MERN Stack" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <meta name="description"
+    content="Shindetter - Twitter Clone Built Using MERNG(MongoDB, Express, React Nodejs & GraphQL) Stack" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  <meta property="og:image" content="%PUBLIC_URL%/shindetter-twitter-clone.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="571">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="%PUBLIC_URL%" />
+  <meta property="og:title" content="Shindetter" />
+  <meta property="og:description"
+    content="Shindetter - Twitter Clone Built Using MERNG(MongoDB, Express, React Nodejs & GraphQL) Stack" />
+
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>Shindetter - MERNG Twitter Clone</title>
 </head>
 
